--- a/resources/style.css
+++ b/resources/style.css
@@ -22,10 +22,28 @@ h1, h2, h3 {
     color: white;
 }
 
+.supporting {
+    text-align: center;
+}
+
 .supporting h2 {
     font-size: 32px;
 }
 
 .supporting h3 {
     font-size: 23px;
+}
+
+.supporting-item p {
+    font-size: 14px;
+}
+
+.hero h2 {
+    font-size: 23px;
+}
+
+.footer {
+    background-color: dimgray;
+    font-size: 11px;
+    color: white;
 }
